<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Maps V2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="hello">Masukkan Latitude Longitude</string> 
      <string name="btnAddtxt">Add</string> 
      <string name="namaLabel">Kode</string> 
      <string name="hobiLabel">Kota</string> 
     <string name="nomorLabel">No.</string> 
     <string name="btnGetRow">Get</string> 
      <string name="btnUpdateRow">Update</string> 
      <string name="ketUpdate">Sebelum mengubah data,  
        pilih dulu  baris ke berapa  
        data yang akan diubah</string> 
      <string name="ketAmbilBaris">Update data pada baris 
	ke</string> 
      <string name="ketDelete">Tulis no. baris  
        yang akan di delete,  
        lalu klik tombol &quot;delete&quot;</string> 
      <string name="btnDel">Delete</string>

</resources>
