<LinearLayout   
   xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"  
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"> 
    <View android:layout_width="wrap_content"  
    android:id="@+id/view2" 
    android:layout_height="1dip"  
    android:background="#FF909090"></View> 
    <TextView android:layout_height="wrap_content"  
    android:layout_width="wrap_content"  
    android:id="@+id/textView3"  
    android:text="@string/ketDelete"></TextView> 
    <LinearLayout android:id="@+id/linearLayout4"  
      android:layout_height="wrap_content"  
      android:layout_width="match_parent"> 
      <EditText android:layout_height="wrap_content"  
        android:layout_width="50dip"  
        android:id="@+id/idDelete"></EditText> 
      <Button android:layout_height="wrap_content"  
        android:layout_width="wrap_content"  
        android:id="@+id/button1"  
        android:text="@string/btnDel"></Button> 
    </LinearLayout> 
    <TableLayout android:layout_height="wrap_content" 
      android:layout_width="match_parent"  
      android:id="@+id/tabel_data"> 
    <TableRow android:id="@+id/tableRow1"  
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"> 
    <TextView android:layout_height="wrap_content" 
      android:layout_width="50dip"  
      android:text="@string/nomorLabel" 
      android:id="@+id/no_id"></TextView> 
    <TextView android:layout_height="wrap_content" 
      android:layout_width="100dip" 
      android:text="@string/namaLabel" 
      android:id="@+id/nama_id"></TextView> 
      <TextView android:layout_width="100dip" 
      android:layout_height="wrap_content"  
      android:text="@string/hobiLabel" 
      android:id="@+id/hobi_id"></TextView>
      <TextView
          android:id="@+id/textView1"
          android:layout_width="100dip"
          android:layout_height="wrap_content"
          android:text="Latitude" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="100dip"
          android:layout_height="wrap_content"
          android:text="Longitude" />
      </TableRow> 
    </TableLayout> 
  </LinearLayout> 